CSS:  Improve readability of showcase mode for written content (fixes #37).

--- a/static/css/_app_deerbooks.scss
+++ b/static/css/_app_deerbooks.scss
@@ -14,6 +14,8 @@
 	line-height:28px;
 }
 
+body.showcase_mode .left_content .left_full.writing_page { max-width:80em; }
+
 .left_content .left_full.writing_page .page_body_text {
 	body.showcase_mode & { 
 		font-size:1.15em;
